<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/main">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
          />

    <Button
        android:id="@+id/btn_myforecast_id"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_myforecast_text"/>

    <Button
        android:id="@+id/btn_forecast_id"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_forecast_text" 
        
        />
		
    <Button
        android:id="@+id/btn_weather_id"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_weather_text" />
<!-- 
    <Button
        android:id="@+id/btn_exit_id"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_exit_text" />
 -->

    <Button
        android:id="@+id/btn_friend_wupdate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_friend_wupdate_text" />

    <Button
        android:id="@+id/btn_forecast_map_id"
		android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"

        android:text="@string/btnForecastMap" />

</LinearLayout>